// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`repositories snapshots mutliple repositories renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-lg-6 offset-lg-3"
    >
      <div
        className="accordion"
      >
        <div
          className="card"
        >
          <div
            className="card-header"
            onClick={[Function]}
          >
            1.  
             
            Test
          </div>
          <div
            aria-expanded={null}
            className="collapse"
          >
            <div
              className="card-body"
            >
              <a>
                Go to repository
              </a>
              <br />
              <br />
              <h5>
                Description:
              </h5>
              <span>
                Description
              </span>
              <br />
              <br />
              <h5>
                Created on:
              </h5>
              <span>
                Invalid Date
              </span>
            </div>
          </div>
        </div>
        <div
          className="card"
        >
          <div
            className="card-header"
            onClick={[Function]}
          >
            2.  
             
            Test2
          </div>
          <div
            aria-expanded={null}
            className="collapse"
          >
            <div
              className="card-body"
            >
              <a>
                Go to repository
              </a>
              <br />
              <br />
              <h5>
                Description:
              </h5>
              <span
                className="text-warning"
              >
                This repository does not have a description
              </span>
              <br />
              <br />
              <h5>
                Created on:
              </h5>
              <span>
                Invalid Date
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`repositories snapshots no repositories renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-lg-6 offset-lg-3"
    >
      <div
        className="alert alert-warning"
      >
        No repositories match the filter!
      </div>
    </div>
  </div>
</div>
`;

exports[`repositories snapshots single repository renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-lg-6 offset-lg-3"
    >
      <div
        className="accordion"
      >
        <div
          className="card"
        >
          <div
            className="card-header"
            onClick={[Function]}
          >
            1.  
             
            Test
          </div>
          <div
            aria-expanded={null}
            className="collapse"
          >
            <div
              className="card-body"
            >
              <a>
                Go to repository
              </a>
              <br />
              <br />
              <h5>
                Description:
              </h5>
              <span>
                Description
              </span>
              <br />
              <br />
              <h5>
                Created on:
              </h5>
              <span>
                Invalid Date
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
